--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
@@ -21,5 +20,6 @@
   "devDependencies": {
     "nodemon": "^2.0.20",
     "prettier": "^2.8.0"
-  }
+  },
+  "description": ""
 }
